--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
     const loader = new THREE.FontLoader();
     loader.load('https://threejs.org/examples/fonts/helvetiker_regular.typeface.json', function (font) {
-        const textGeometry = new THREE.TextGeometry('                HCI_PROJECT\n\nSubmitted - to  :  Dr.  Anjali Gautam', {
+        const textGeometry = new THREE.TextGeometry('                HCI_PROJECT\n\nSubmitted - to  :  Dr.  Anjali', {
             font: font,
             size: 0.3,
             height: 0.05,
